# ewrew

./: pyproject.toml
fastapi-app/: main.py
fastapi-app/alembic/: env.py
fastapi-app/alembic/versions/: 2024_07_31_1654-b7e656ca6a87_create_users_table.py  2024_07_31_1657-ea60e0556f65_create_users_table.py  2024_07_31_1702-b82e28ca436e_create_users_table.py  2024_07_31_2120-8c855b3db883_ef.py
fastapi-app/api/: __init__.py
fastapi-app/api/api_v1/: __init__.py  users.py
fastapi-app/core/: config.py
fastapi-app/core/models/: __init__.py  base.py  db_helper.py  user.py
fastapi-app/core/schemas/: user.py
fastapi-app/crud/: users.py
